--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     text-align: left;
-    background: #66ffcc;
+    background: #16A085;
     color: black;
   }
 
@@ -44,6 +44,10 @@ header {
     display: inline-block;
   }
 
+  nav a:hover, .contact-tags:hover {
+    color: #66ffcc;
+  }
+
   .contact-tags {
     padding: 55px 35px;
     font-size: 30px;
@@ -65,7 +69,7 @@ header {
     position: absolute;
     top: 70%;
     right: 5%;
-    background-color: #66ffcc;
+    background-color: #16A085;
     color: #003322;
     font-size: 20px;
     padding-left: 20px;
@@ -98,18 +102,24 @@ header {
   }
 
   .card {
-    border: solid #66ffcc;
+    border: solid #16A085;
     border-width: 10px;
     flex: 0 0 400px;
   }
 
   .card a {
     text-align: center;
+    color: #003322;
   }
   
   .card img {
     width: 100%;
   }
+
+  .card img:hover {
+    opacity: .5;
+  }
+
 
   .horiseon-card {
     position: relative;
@@ -119,12 +129,14 @@ header {
     position: absolute;
     top: 80%;
     left: 10%;
-    background-color: #003322;
-    color: #66ffcc;
+    color: #003322;
+    background-color: #16A085;
+    padding: 2%;
+    text-decoration: none;
   }
 
   @media screen and (max-width: 768px) {
-    main,
+    section,
     nav {
       flex-direction: column;
     }
@@ -133,4 +145,10 @@ header {
       border-right: none;
       border-bottom: solid #003322 5px;
     }
+    .subtitle-text-block {
+      position: absolute;
+    top: 50%;
+    right: 25%;
+    }
+
   }
